# pro-android-games-15

./: LICENSE.txt  README.md
Ch02.Project/: .classpath  .cproject  .project  AndroidManifest.xml
Ch02.Project/jni/: Android.mk  ch02.cpp  ch02_project_ProjectActivity.h
Ch11.Project/: .project
DemoWearApp/: project.properties
FirstOpenGL/: .classpath  .project  AndroidManifest.xml
ch02.Project.Multitouch/: .classpath  .project
ch02.Project.Multitouch/jni/: Android.mk  lib.c
ch03.OpenGL/: .project
ch03.OpenGL/jni/: Android.mk  cube.c  cuberenderer.c
ch04.OpenGL2Shaders/: .project
ch04.OpenGL2Shaders/jni/: Android.mk  com_opengl_shader_ViewRenderer.h  ico.cpp
ch05.Android.Doom/: .project
ch05.Android.Doom/Doom/: Android.mk  Application.mk  README.TXT
ch06.Quake/: .project
ch06.Quake/jni/: Application.mk
ch07.QuakeII/: .project  AndroidManifest.xml
ch07.QuakeII/jni/: Android.mk  Application.mk  hardlinkedq2gl.mk
ch08.Wiimote/: .project  AndroidManifest.xml
ch08.Wiimote/jni/: Android.mk  Application.mk  wiic.mk  zeemote.mk
ch08.Wiimote/jni/WiiCNew/src/: CMakeLists.txt  Doxyfile.in
ch08.Wiimote/jni/WiiCNew/src/log/: accsample.h  dataset.cpp  dataset.h  sample.h  training.cpp  training.h
ch08.Wiimote/jni/WiiCNew/src/ml/: MLData.h
ch08.Wiimote/jni/WiiCNew/src/wiic/: definitions.h  dynamics.c  dynamics.h  events.c  io_mac.m  io_nix.c  ir.c  motionplus.c  motionplus.h  nunchuk.c  wiic.c  wiic_functions.h  wiic_internal.h  wiic_macros.h  wiic_structs.h
ch08.Wiimote/jni/WiiCNew/src/wiicpp/: CMakeLists.txt  wiicpp.cpp  wiicpp.h
wear/: .project
(+201 files in other folders)
